--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
     <script>
       // You can also require other files to run in this process
-      require('./renderer.js')
+      setTimeout(() => {
+        var electron = require('electron').remote;
+        electron.dialog.showMessageBox(electron.BrowserWindow.getFocusedWindow(),{
+          message: 'Try closing main window without closing this modal'
+        });
+      }, 1000);
     </script>
   </body>
 </html>
